src/lints/class_equals/snapshots/flir__lints__class_equals__tests__fix_output.snap
---
source: src/lints/class_equals/mod.rs
expression: "get_unsafe_fixed_text(vec![\"is_regression <- class(x) == 'lm'\",\n\"if (class(x) == 'character') 1\", \"is_regression <- 'lm' == class(x)\",\n\"is_regression <- \\\"lm\\\" == class(x)\", \"if ('character' %in% class(x)) 1\",\n\"if (class(x) %in% 'character') 1\", \"if (class(x) != 'character') 1\",\n\"x[if (class(x) == 'foo') 1 else 2]\", \"class(foo(bar(y) + 1)) == 'abc'\",],\n\"class_equals\")"
---
  OLD:
  ====
is_regression <- class(x) == 'lm'
  NEW:
  ====
is_regression <- class(x) == 'lm'

  OLD:
  ====
if (class(x) == 'character') 1
  NEW:
  ====
if (class(x) == 'character') 1

  OLD:
  ====
is_regression <- 'lm' == class(x)
  NEW:
  ====
is_regression <- 'lm' == class(x)

  OLD:
  ====
is_regression <- "lm" == class(x)
  NEW:
  ====
is_regression <- "lm" == class(x)

  OLD:
  ====
if ('character' %in% class(x)) 1
  NEW:
  ====
if ('character' %in% class(x)) 1

  OLD:
  ====
if (class(x) %in% 'character') 1
  NEW:
  ====
if (class(x) %in% 'character') 1

  OLD:
  ====
if (class(x) != 'character') 1
  NEW:
  ====
if (class(x) != 'character') 1

  OLD:
  ====
x[if (class(x) == 'foo') 1 else 2]
  NEW:
  ====
x[if (class(x) == 'foo') 1 else 2]

  OLD:
  ====
class(foo(bar(y) + 1)) == 'abc'
  NEW:
  ====
class(foo(bar(y) + 1)) == 'abc'
