src/lints/class_equals/snapshots/flir__lints__class_equals__tests__lint_output.snap
---
source: src/lints/class_equals/mod.rs
expression: lint_output
---
  OLD:
  ====
is_regression <- class(x) == 'lm'
  NEW:
  ====
/tmp/test-[...] [1:18] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.
/tmp/test-[...] [1:18] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.


  OLD:
  ====
if (class(x) == 'character') 1
  NEW:
  ====
/tmp/test-[...] [1:5] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.


  OLD:
  ====
is_regression <- 'lm' == class(x)
  NEW:
  ====
/tmp/test-[...] [1:18] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.
/tmp/test-[...] [1:18] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.


  OLD:
  ====
is_regression <- "lm" == class(x)
  NEW:
  ====
/tmp/test-[...] [1:18] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.
/tmp/test-[...] [1:18] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.


  OLD:
  ====
if ('character' %in% class(x)) 1
  NEW:
  ====
/tmp/test-[...] [1:5] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.


  OLD:
  ====
if (class(x) %in% 'character') 1
  NEW:
  ====
/tmp/test-[...] [1:5] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.


  OLD:
  ====
if (class(x) != 'character') 1
  NEW:
  ====
/tmp/test-[...] [1:5] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.


  OLD:
  ====
x[if (class(x) == 'foo') 1 else 2]
  NEW:
  ====
/tmp/test-[...] [1:7] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.
/tmp/test-[...] [1:7] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.


  OLD:
  ====
class(foo(bar(y) + 1)) == 'abc'
  NEW:
  ====
/tmp/test-[...] [1:1] class-equals Use `inherits(x, 'class')` instead of comparing `class(x)` with `==` or `%in%`.
