src/lints/class_equals/snapshots/flir__lints__class_equals__tests__no_fix_output.snap
---
source: src/lints/class_equals/mod.rs
expression: "get_fixed_text(vec![\"is_regression <- class(x) == 'lm'\",], \"class_equals\")"
---
  OLD:
  ====
is_regression <- class(x) == 'lm'
  NEW:
  ====
is_regression <- class(x) == 'lm'
